<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FAF4E2"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/titulosobremi"
                android:textColor="#009688"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/redsocial_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="@string/edittext_redsocial" />

            <Button
                android:id="@+id/botonredsocial"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_gravity="center"
                android:layout_marginBottom="24dp"
                android:text="@string/button_redsocial"
                app:strokeColor="#D37D7D" />

            <EditText
                android:id="@+id/streetview_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edittext_localizacion" />

            <Button
                android:id="@+id/botonstreetview"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_gravity="center"
                android:layout_marginBottom="24dp"
                android:text="@string/button_localizacion" />

            <EditText
                android:id="@+id/compartir_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edittext_compartir" />

            <Button
                android:id="@+id/botoncompartir"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_gravity="center"
                android:layout_marginBottom="24dp"
                android:text="@string/button_compartir" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tituloproyectos"
                android:textColor="#009688"
                android:textSize="18sp" />

            <Button
                android:id="@+id/buttonListaCompra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/listaCompra" />

            <Button
                android:id="@+id/buttonsumamul"
                android:layout_width="133dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/calculos" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>