<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8BC34A"
    android:orientation="vertical"
    app:layout_constraintBottom_toTopOf="@+id/textViewmiNombre"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="481dp"
        android:layout_weight="1"
        android:contentDescription="@string/mifoto"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/mifoto" />

    <TextView
        android:id="@+id/textViewmiNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/minombre"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <Button
        android:id="@+id/buttonBienvenida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/bienvenida" />

</LinearLayout>
